--- a/index.html
+++ b/index.html
@@ -1,86 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
+    <title>Color palette generator</title>
   </head>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      background-color: #222222;
-    }
-    h1 {
-      font-size: 20px;
-      color: #ffffff;
-      margin-top: 20px;
-    }
-    .gerador {
-      width: 320px;
-      min-height: 400px;
-      margin-top: 10px;
-      margin-bottom: 30px;
-      padding: 20px 20px 30px;
-      background-color: #fffdff;
-      border-radius: 30px;
-    }
-    .gerador .box {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-    .header {
-      display: flex;
-      align-items: center;
-      margin: 10px;
-    }
-    .header h4 {
-      margin: 0 10px;
-      font-size: 12px;
-    }
-    .input-text {
-      background-color: #fff;
-      height: 30px;
-      margin: 10px 10px 20px;
-      font-size: 19px;
-      border: 1px solid #714593;
-      outline: none;
-    }
-    .paletas {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    ul {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-    ul li {
-      text-align: center;
-      width: 120px;
-      padding: 10px 10px;
-      font-size: 19px;
-      font-weight: 600;
-      font-family: "Arial";
-      text-transform: uppercase;
-      list-style: none;
-      border: 2px solid transparent;
-      cursor: pointer;
-    }
-    ul li:hover {
-      border: 2px solid #222222;
-    }
-  </style>
   <body>
     <h1>Gerador de Paleta de Cores</h1>
     <div class="gerador">
@@ -112,131 +37,6 @@
         </div>
       </div>
     </div>
-
-    <script>
-      const liColors = document.querySelectorAll("li");
-      const list = document.querySelector("ul");
-      const color = document.querySelector("#color");
-      const inputText = document.querySelector(".input-text");
-
-      inputText.addEventListener("keydown", (e) => {
-        let codeHex = e.target.value;
-        if (e.keyCode === 13) {
-          if (codeHex.substring(0, 1) == "#") {
-            if (
-              codeHex.substring(1).length == 6 &&
-              isHexadecimal(codeHex.substring(1))
-            ) {
-              console.log(isHexadecimal(codeHex.substring(1)));
-              gerador(e.target.value.slice(1));
-            }
-          }
-          inputText.value = "";
-        }
-      });
-      color.value = "#714593";
-      const myColors = [
-        "#714593",
-        "#8155a3",
-        "#9165b3",
-        "#a175c3",
-        "#b185d3",
-        "#c195e3",
-        "#d1a5f3",
-        "#e1b5ff",
-        "#f1c5ff",
-        "#ffd5ff",
-        "#ffe5ff",
-        "#fff5ff",
-      ];
-
-      liColors.forEach((c, i) => {
-        c.style.background = myColors[i];
-      });
-      liColors.forEach((liColor) => {
-        liColor.addEventListener("click", (e) => clickToCopy(e.target));
-      });
-      // events
-      color.addEventListener("change", (e) => gerador(e.target.value.slice(1)));
-
-      function gerador(hex) {
-        if (list.children.length > 0) {
-          for (let lis in list) {
-            if (list.firstChild) {
-              list.firstChild.remove();
-            }
-          }
-          geraLis(hex);
-        } else {
-          geraLis(hex);
-        }
-      }
-
-      //gerador("1c1c8e")
-
-      function setLimit(h) {
-        if (h > 255) {
-          return 255;
-        } else {
-          h = h + 8;
-          if (h > 255) {
-            return 255;
-          } else {
-            return h;
-          }
-        }
-      }
-      function formatter(s) {
-        let j = s.toString(16);
-        if (s.length < 2) {
-          return `0${s.toString(j)}`;
-        } else {
-          return j;
-        }
-      }
-
-      function geraLis(hex) {
-        hex = hex.toLowerCase();
-        let r = parseInt(hex.substring(0, 2), 16);
-        let g = parseInt(hex.substring(2, 4), 16);
-        let b = parseInt(hex.substring(4, 6), 16);
-        let n = r;
-        let k = b;
-        for (let i = 0; i < 30; i++) {
-          r = setLimit(r);
-          g = setLimit(g);
-          b = setLimit(b);
-          const li = document.createElement("li");
-
-          li.style.background = `rgb(${parseInt(r)},${parseInt(g)},${parseInt(
-            b
-          )})`;
-          li.textContent = `#${formatter(r)}${formatter(g)}${formatter(b)}`;
-          li.addEventListener("click", (e) => clickToCopy(e.target));
-          if (r == 255 && g == 255 && b == 255) {
-            return;
-          } else {
-            list.append(li);
-          }
-        }
-      }
-
-      function clickToCopy(el) {
-        let textToCopy = el.textContent;
-        el.style.pointerEvents = "none";
-        el.textContent = "Copiado!";
-        el.style.color = "#d83440";
-        setTimeout(() => {
-          el.textContent = textToCopy;
-          el.style.color = "";
-          el.style.pointerEvents = "auto";
-        }, 1000);
-        navigator.clipboard.writeText(textToCopy);
-      }
-      function isHexadecimal(str) {
-        const regex = /^[0-9a-f]+$/i;
-        return regex.test(str);
-      }
-    </script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
