--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,20 +7,20 @@
     <title>Color palette generator</title>
   </head>
   <body>
-    <h1>Gerador de Paleta de Cores</h1>
-    <div class="gerador">
+    <h1 class="title">Color palette generator</h1>
+    <div class="generator">
       <div class="box">
         <div class="header">
           <h4>Choose your color:</h4>
           <input id="color" type="color" />
         </div>
         <input
-          class="input-text"
+          class="hex-code-input"
           type="text"
           placeholder="Paste your code here: #714593"
         />
-        <div class="paletas">
-          <ul>
+        <div class="palettes">
+          <ul class="color-list">
             <li>#714593</li>
             <li>#8155a3</li>
             <li>#9165b3</li>
