--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
           <h4>Choose your color:</h4>
           <input id="color" type="color" />
         </div>
-        <input
-          class="hex-code-input"
-          type="text"
-          placeholder="Paste your code here: #714593"
-        />
+        <div class="controls">
+          <input
+            class="hex-code-input"
+            type="text"
+            placeholder="Paste your code here: #714593"
+          />
+          <button id="generate" class="generate-button">Generate</button>
+        </div>
+
         <div class="palettes">
           <ul class="color-list">
             <li>#714593</li>
