Alinhando container no centro da pagina

--- a/index.html
+++ b/index.html
@@ -7,37 +7,39 @@
     <title>Color palette generator</title>
   </head>
   <body>
-    <h1 class="title">Color palette generator</h1>
-    <div class="generator">
-      <div class="box">
-        <div class="header">
-          <h4>Choose your color:</h4>
-          <input id="color" type="color" />
-        </div>
-        <div class="controls">
-          <input
-            class="hex-code-input"
-            type="text"
-            placeholder="Paste your code here: #714593"
-          />
-          <button id="generate" class="generate-button">Generate</button>
-        </div>
+    <div>
+      <h1 class="title">Color palette generator</h1>
+      <div class="generator">
+        <div class="box">
+          <div class="header">
+            <h4>Choose your color:</h4>
+            <input id="color" type="color" />
+          </div>
+          <div class="controls">
+            <input
+              class="hex-code-input"
+              type="text"
+              placeholder="Paste your code here: #714593"
+            />
+            <button id="generate" class="generate-button">Generate</button>
+          </div>
 
-        <div class="palettes">
-          <ul class="color-list">
-            <li>#714593</li>
-            <li>#8155a3</li>
-            <li>#9165b3</li>
-            <li>#a175c3</li>
-            <li>#b185d3</li>
-            <li>#c195e3</li>
-            <li>#d1a5f3</li>
-            <li>#e1b5ff</li>
-            <li>#f1c5ff</li>
-            <li>#ffd5ff</li>
-            <li>#ffe5ff</li>
-            <li>#fff5ff</li>
-          </ul>
+          <div class="palettes">
+            <ul class="color-list">
+              <li>#714593</li>
+              <li>#8155a3</li>
+              <li>#9165b3</li>
+              <li>#a175c3</li>
+              <li>#b185d3</li>
+              <li>#c195e3</li>
+              <li>#d1a5f3</li>
+              <li>#e1b5ff</li>
+              <li>#f1c5ff</li>
+              <li>#ffd5ff</li>
+              <li>#ffe5ff</li>
+              <li>#fff5ff</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
